2008-08-28 Mark Hammond <mhammond@skippinet.com.au>

	* Copy the manifest, if any, from the 'template' into the targets
	to ensure embedded assembly references, as required for python 2.6 based
	apps, are copied.

	* Allow each target to specify Vista User Access Control flags. For 
	example, specifying 'uac_execution_info="requireAdministrator"' would
	force elevation for the final executable.

2008-05-19  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Bump version number to 0.6.8.

	* Updated test suite to be smarter about which interpreters to use
	for testing and to output stats.

	* Merged modulefinder.py r59200 from the Python svn trunk into
	mf.py in order to support relative imports.

	* Use Python 2.5 to build the source distribution.

	* Include the entire test suite in the source distribution.

2008-04-17  Thomas Heller  <theller@python.net>

	* Changes to the test suite.

	* Fix MemoryLoadLibrary to handle loading function addresses by
	ordinal numbers.  Patch and test by Matthias Miller - thanks!

2008-04-05  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Using the options compressed=1, bundle_files=3, and zipfile=None at
	the same time now works; patch from Alexey Borzenkov (sf request id
	1707920)

2008-04-04  Thomas Heller  <theller@python.net>

	* py2exe\boot_ctypes_com_server.py: Port this module from
	ctypes.com to comtypes.  Work in progress.

2008-04-01  Thomas Heller  <theller@python.net>

	* Allow renaming of single-executable files; patch from Alexey
	Borzenkov (sf request id 1516099)


2008-02-29  Thomas Heller  <theller@python.net>

	* py2exe\__init__.py: Bump version number to 0.6.7.

	* source\py2exe_util.c: Embedding icon resources into the image
	does now work correctly even for ico files containing multiple
	images.

2007-09-07  Thomas Heller  <theller@python.net>

	* build_exe.py: Patch from Grant Edwards, slightly adjusted:
	py2exe now renames the pyd files that it copies into the dist